# discord-haskell

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Styleguide.md  changelog.md  changelog.md.rej  discord-haskell.cabal  discord-hs.cabal  log  notes.md  stack.yaml
.github/: .travis.yml
.github/workflows/: main.yml  parseVersions.hs
discord-core/: discord-core.cabal
discord-core/src/Network/Discord/: Gateway.hs
discord-gateway/: discord-gateway.cabal
discord-gateway/src/Network/Discord/: Gateway.hs
discord-gateway/src/Network/Discord/Gateway/: Internal.hs
discord-rest/: LICENSE  discord-rest.cabal
discord-rest/src/Network/Discord/: Rest.hs
discord-rest/src/Network/Discord/Rest/: Channel.hs  Guild.hs  HTTP.hs  Prelude.hs  Requests.hs  User.hs
discord-types/: discord-types.cabal  stack.yaml
discord-types/src/Network/Discord/: Types.hs
discord-types/src/Network/Discord/Types/: Channel.hs  Events.hs  Gateway.hs  Guild.hs  Prelude.hs
docs/: README.md  Site.hs  applicationcommands.md  build.sh  cache.md  components.md  contributing.md  creating-bot.md  debugging  debugging.md  design.md  embeds.md  emoji.md  installing.md  intents.md  sharding.md  todo.md  voice.md
examples/: ExampleUtils.hs  attachments.hs  auth-token  cache.hs  custom-rest.hs  ekko_bot.hs  example-setup  gateway.hs  hello_world.hs  interaction-commands-simple.hs  interaction-commands.hs  language.hs  logbot.hs  monaddiscord-ping-pong.hs  ping-pong.hs  pingpong.hs  putstr.hs  rest-without-gateway.hs  rest.hs  slash-commands.hs  state-counter.hs
matrix/: stack-7.16.yaml
src/: Discord.hs  DiscordMonadTransformerLibrary.hs
src/Discord/: Gateway.hs  Handle.hs  Interactions.hs  Monad.hs  Requests.hs  Rest.hs  Types.hs
src/Discord/Gateway/: Cache.hs  EventLoop.hs  Internal.hs
src/Discord/Internal/: Gateway.hs  Rest.hs  Types.hs
src/Discord/Internal/Gateway/: Cache.hs  EventLoop.hs
src/Discord/Internal/Rest/: ApplicationCommands.hs  ApplicationInfo.hs  AutoModeration.hs  Channel.hs  Emoji.hs  Guild.hs  HTTP.hs  Interactions.hs  Invite.hs  Polls.hs  Prelude.hs  ScheduledEvents.hs  User.hs  Voice.hs  Webhook.hs
src/Discord/Internal/Types/: ApplicationCommands.hs  ApplicationInfo.hs  AuditLog.hs  AutoModeration.hs  Channel.hs  Color.hs  Components.hs  Embed.hs  Emoji.hs  Events.hs  Gateway.hs  Guild.hs  Interactions.hs  Polls.hs  Prelude.hs  RolePermissions.hs  ScheduledEvents.hs  SlashCommands.hs  User.hs
src/Discord/Rest/: Channel.hs  Emoji.hs  Guild.hs  HTTP.hs  Invite.hs  Prelude.hs  Requests.hs  User.hs  Voice.hs  Webhook.hs
src/Discord/Types/: Channel.hs  Events.hs  Gateway.hs  Guild.hs  Prelude.hs
src/Language/: Discord.hs
src/Network/: Discord.hs
src/Network/Discord/: Client.hs  Framework.hs  Gateway.hs  Http.hs  Rest.hs  Types.hs
src/Network/Discord/Rest/: Channel.hs  Guild.hs  HTTP.hs  Prelude.hs  Requests.hs  User.hs
src/Network/Discord/Types/: Channel.hs  Events.hs  Gateway.hs  Guild.hs  Json.hs  Prelude.hs
temp/: discord-hs.cabal  stack.yaml
