cabal-version:       2.0
name:                discord-haskell
-- library version is also noted at src/Discord/Rest/Prelude.hs
version:             1.12.4
description:         Functions and data types to write discord bots.
                     Official discord docs <https://discord.com/developers/docs/reference>.
                     .
                     See the project readme for quickstart notes
                     <https://github.com/aquarial/discord-haskell#discord-haskell->
synopsis:            Write bots for Discord in Haskell
homepage:            https://github.com/aquarial/discord-haskell
bug-reports:         https://github.com/aquarial/discord-haskell/issues
license:             MIT
license-file:        LICENSE
author:              Karl
maintainer:          ksfish5@gmail.com
copyright:           2019 Karl
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , changelog.md

source-repository head
  type:                git
  location:            https://github.com/aquarial/discord-haskell.git

executable ping-pong
  main-is:             examples/ping-pong.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-type-defaults -fno-warn-unused-record-wildcards
                       -threaded
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell

-- executable interaction-commands
--   main-is:             examples/interaction-commands.hs
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--                        -fno-warn-type-defaults -fno-warn-unused-record-wildcards
--                        -threaded
--   build-depends:       base
--                      , text
--                      , unliftio
--                      , discord-haskell
--                      , bytestring

library
  ghc-options:         -Wall
                       -fno-warn-type-defaults -fno-warn-unused-record-wildcards
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- extensions:
  exposed-modules:     Discord
                     , Discord.Types
                     , Discord.Handle
                     , Discord.Interactions
                     , Discord.Requests
                     , Discord.Internal.Gateway
                     , Discord.Internal.Gateway.Cache
                     , Discord.Internal.Gateway.EventLoop
                     , Discord.Internal.Rest
                     , Discord.Internal.Rest.Prelude
                     , Discord.Internal.Rest.HTTP
                     , Discord.Internal.Rest.Invite
                     , Discord.Internal.Rest.Emoji
                     , Discord.Internal.Rest.User
                     , Discord.Internal.Rest.Guild
                     , Discord.Internal.Rest.Channel
                     , Discord.Internal.Rest.Voice
                     , Discord.Internal.Rest.Webhook
                     , Discord.Internal.Rest.ApplicationCommands
                     , Discord.Internal.Rest.Interactions
                     , Discord.Internal.Types
                     , Discord.Internal.Types.Prelude
                     , Discord.Internal.Types.Channel
                     , Discord.Internal.Types.Events
                     , Discord.Internal.Types.Gateway
                     , Discord.Internal.Types.Guild
                     , Discord.Internal.Types.User
                     , Discord.Internal.Types.Embed
                     , Discord.Internal.Types.ApplicationCommands
                     , Discord.Internal.Types.Interactions
                     , Discord.Internal.Types.Components
                     , Discord.Internal.Types.Color
  build-depends:
                       base >= 4 && <5
                     , aeson
                     , async
                     , bytestring
                     , base64-bytestring
                     , containers
                     , data-default
                     , emoji == 0.1.0.2
                     , http-client
                     , iso8601-time
                     , MonadRandom
                     , req
                     , JuicyPixels
                     , safe-exceptions
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , websockets
                     , wuss
                     , mtl
                     , unliftio
                     , scientific
