cabal-version:       2.0
name:                discord-haskell
version:             1.15.2
description:         Functions and data types to write discord bots.
                     Official discord docs <https://discord.com/developers/docs/reference>.
                     .
                     See the project readme for quickstart notes
                     <https://github.com/discord-haskell/discord-haskell#discord-haskell->
synopsis:            Write bots for Discord in Haskell
homepage:            https://github.com/discord-haskell/discord-haskell
bug-reports:         https://github.com/discord-haskell/discord-haskell/issues
license:             MIT
license-file:        LICENSE
author:              Karl
maintainer:          ksfish5@gmail.com
copyright:           2019 Karl
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , changelog.md

source-repository head
  type:                git
  location:            https://github.com/discord-haskell/discord-haskell.git

executable ping-pong
  main-is:             ping-pong.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
  hs-source-dirs:      examples
  other-modules:
    ExampleUtils
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell

executable interaction-commands
  main-is:             interaction-commands.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
  hs-source-dirs:      examples
  other-modules:
    ExampleUtils
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell
                     , bytestring

executable cache
  main-is:             cache.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
  hs-source-dirs:      examples
  other-modules:
    ExampleUtils
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell

executable gateway
  main-is:             gateway.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
  hs-source-dirs:      examples
  other-modules:
    ExampleUtils
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell

executable rest-without-gateway
  main-is:             rest-without-gateway.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
  hs-source-dirs:      examples
  other-modules:
    ExampleUtils
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell

executable state-counter
  main-is:             state-counter.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
  hs-source-dirs:      examples
  other-modules:
    ExampleUtils
  build-depends:       base
                     , text
                     , unliftio
                     , discord-haskell

library
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:
    Paths_discord_haskell
  autogen-modules:
    Paths_discord_haskell
  exposed-modules:
      Discord
    , Discord.Types
    , Discord.Handle
    , Discord.Interactions
    , Discord.Requests
    , Discord.Internal.Gateway
    , Discord.Internal.Gateway.Cache
    , Discord.Internal.Gateway.EventLoop
    , Discord.Internal.Rest
    , Discord.Internal.Rest.Prelude
    , Discord.Internal.Rest.HTTP
    , Discord.Internal.Rest.Invite
    , Discord.Internal.Rest.Emoji
    , Discord.Internal.Rest.User
    , Discord.Internal.Rest.Guild
    , Discord.Internal.Rest.Channel
    , Discord.Internal.Rest.Voice
    , Discord.Internal.Rest.Webhook
    , Discord.Internal.Rest.ApplicationCommands
    , Discord.Internal.Rest.Interactions
    , Discord.Internal.Types
    , Discord.Internal.Types.Prelude
    , Discord.Internal.Types.Channel
    , Discord.Internal.Types.Events
    , Discord.Internal.Types.Gateway
    , Discord.Internal.Types.Guild
    , Discord.Internal.Types.User
    , Discord.Internal.Types.Embed
    , Discord.Internal.Types.ApplicationCommands
    , Discord.Internal.Types.Interactions
    , Discord.Internal.Types.Components
    , Discord.Internal.Types.Color
    , Discord.Internal.Types.Emoji
    , Discord.Internal.Types.ScheduledEvents
  build-depends:
  -- https://gitlab.haskell.org/ghc/ghc/-/wikis/commentary/libraries/version-history
  -- below also sets the GHC version effectively. set to == 8.10.*, == 9.0.*.
    base == 4.14.* || == 4.15.*,
    aeson >= 1.5 && < 1.6 || >= 2.0 && < 2.2,
    async >=2.2 && <2.3,
    bytestring >=0.10 && <0.11,
    base64-bytestring >=1.1 && <1.2,
    containers >=0.6 && <0.7,
    data-default >=0.7 && <0.8,
    emoji ==0.1.*,
    http-client >=0.6 && <0.8,
    iso8601-time >=0.1 && <0.2,
    MonadRandom >=0.5 && <0.6,
    req >=3.9 && <3.13,
    safe-exceptions >=0.1 && <0.2,
    text >=1.2 && <1.3,
    time >=1.9 && <1.10,
    websockets >=0.12 && <0.13,
    network >=3.0.0.0 && <3.2.0.0,
    wuss >=1.1 && <1.2,
    mtl >=2.2 && <2.3,
    unliftio >=0.2 && <0.3,
    scientific >=0.3 && <0.4,
    http-api-data >=0.4 && <0.6,
    unordered-containers >=0.2.10.0 && <0.3
