name:                discord-rest
version:             0.2.2
synopsis:            An API wrapper for Discord in Haskell
description:         Provides an api wrapper and framework for writing
                     bots against the Discord <https://discordapp.com/> API.
                     If for some reason hackage/stackage is failing to build
                     documentation, a backup set is hosted at <https://jano017.github.io/Discord.hs/>
homepage:            https://github.com/jano017/Discord.hs
license:             MIT
license-file:        LICENSE
author:              Joshua Koike
maintainer:          jkoike2013@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Discord.Rest
                     , Network.Discord.Rest.Channel
                     , Network.Discord.Rest.Guild
                     , Network.Discord.Rest.User
  other-modules:       Network.Discord.Rest.Prelude
                     , Network.Discord.Rest.HTTP
  -- other-extensions:
  build-depends:       base==4.*
                     , discord-types
                     , aeson>=1.0 && <1.2
                     , bytestring==0.10.*
                     , comonad==5.*
                     , data-default==0.7.*
                     , hashable==1.2.*
                     , hslogger==1.2.*
                     , http-client==0.5.*
                     , mtl==2.2.*
                     , req==0.2.*
                     , stm==2.4.*
                     , text==1.2.*
                     , time>=1.6 && <1.9
                     , url==2.1.*
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type : git
  location: https://github.com/jano017/Discord.hs
