name:                discord-rest
version:             0.2.2
synopsis:            An API wrapper for Discord in Haskell
description:         Provides an api wrapper and framework for writing
                     bots against the Discord <https://discordapp.com/> API.
                     If for some reason hackage/stackage is failing to build
                     documentation, a backup set is hosted at <https://jano017.github.io/Discord.hs/>
homepage:            https://github.com/jano017/Discord.hs
license:             MIT
license-file:        LICENSE
author:              Joshua Koike
maintainer:          jkoike2013@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Discord.Rest
                     , Network.Discord.Rest.Channel
                     , Network.Discord.Rest.Guild
                     , Network.Discord.Rest.User
  other-modules:       Network.Discord.Rest.Prelude
                     , Network.Discord.Rest.HTTP
  -- other-extensions:
  build-depends:       base
                     , discord-types
                     , aeson
                     , bytestring
                     , comonad
                     , data-default
                     , hashable
                     , hslogger
                     , http-client
                     , mtl
                     , req
                     , stm
                     , text
                     , time
                     , url
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type : git
  location: https://github.com/jano017/Discord.hs
