name:                discord-types
version:             0.2.2
synopsis:            Type information for discord-hs
description:         Type information for discord-hs
homepage:            https://github.com/jano017/Discord.hs
license:             MIT
license-file:        LICENSE
author:              Joshua Koike
maintainer:          jkoike2013@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Flag disable-docs
  Description: Disable documentation generation
  Manual: True
  Default: False

library
  exposed-modules:     Network.Discord.Types
                     , Network.Discord.Types.Channel
                     , Network.Discord.Types.Guild
                     , Network.Discord.Types.Events
                     , Network.Discord.Types.Gateway
  other-modules:       Network.Discord.Types.Prelude
  build-depends:       base
                     , aeson
                     , bytestring
                     , text
                     , time
                     , vector
                     , unordered-containers
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type : git
  location: https://github.com/jano017/Discord.hs
